{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 45,
  "lineage": "0c188ea7-a892-e3af-0659-43509ae8bffe",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e959b54a92188f49",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-08255d49db9ead5a9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08255d49db9ead5a9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shireen-eng-48-first-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-06f60910c1d07858c",
            "private_dns": "ip-10-0-0-191.eu-west-1.compute.internal",
            "private_ip": "10.0.0.191",
            "public_ip": "34.253.210.129",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00f73107f4011da28",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05947fd98d545cc93",
            "tags": {
              "Name": "Eng48-Shireen-Y-app - instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0eeb5f8c86b78672d"
            ]
          },
          "dependencies": [
            "aws_security_group.app_security_group",
            "aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-08051d1e637b967e8",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-Y-app - igw"
            },
            "vpc_id": "vpc-051a8b4dd7e398ad6"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bac3c08a9a69de96",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08051d1e637b967e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng48-Shireen-Y-app - route"
            },
            "vpc_id": "vpc-051a8b4dd7e398ad6"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ad9d2ea927590cd",
            "route_table_id": "rtb-0bac3c08a9a69de96",
            "subnet_id": "subnet-05947fd98d545cc93"
          },
          "dependencies": [
            "aws_internet_gateway.app_gw",
            "aws_route_table.app_route_table",
            "aws_subnet.app_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0eeb5f8c86b78672d",
            "description": "Allow inbound traffic on port 80 and 3000",
            "egress": [],
            "id": "sg-0eeb5f8c86b78672d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Eng48-Shireen-Y-app",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng48-Shireen-Y-app - sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-051a8b4dd7e398ad6"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-05947fd98d545cc93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-05947fd98d545cc93",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-Y-app - subnet"
            },
            "vpc_id": "vpc-051a8b4dd7e398ad6"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-051a8b4dd7e398ad6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f827361ac748b2f",
            "default_route_table_id": "rtb-0c7a6f6495ea6d5d5",
            "default_security_group_id": "sg-047d9dd3c920c38bc",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-051a8b4dd7e398ad6",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c7a6f6495ea6d5d5",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng48-Shireen-Y-app - VPC"
            }
          }
        }
      ]
    }
  ]
}